--- a/package.json
+++ b/package.json
@@ -11,7 +11,9 @@
   "dependencies": {
     "@radix-ui/react-slot": "^1.1.2",
     "@react-oauth/google": "^0.12.1",
+    "@tailwindcss/postcss": "^4.0.14",
     "@tanstack/react-table": "^8.21.2",
+    "autoprefixer": "^10.4.21",
     "axios": "^1.8.3",
     "chart.js": "^4.4.8",
     "class-variance-authority": "^0.7.1",
