--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "@radix-ui/react-slot": "^1.1.2",
     "@react-oauth/google": "^0.12.1",
+    "@sls-next/serverless-component": "^3.7.0",
     "@tailwindcss/postcss": "^4.0.14",
     "@tanstack/react-table": "^8.21.2",
     "autoprefixer": "^10.4.21",
