--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -32,3 +32,4 @@ jobs:
           SERVERLESS_ACCESS_KEY: ${{ secrets.SERVERLESS_ACCESS_KEY }}
           CI: true
           SLS_DISABLE_INTERACTIVE: 1
+          SLS_TELEMETRY_DISABLED: 1
