--- a/package.json
+++ b/package.json
@@ -9,22 +9,34 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@emotion/react": "^11.14.0",
+    "@emotion/styled": "^11.14.0",
+    "@mui/material": "^6.4.8",
+    "@mui/x-date-pickers": "^7.28.0",
+    "@radix-ui/react-dropdown-menu": "^2.1.6",
     "@radix-ui/react-slot": "^1.1.2",
+    "@radix-ui/themes": "^3.2.1",
     "@react-oauth/google": "^0.12.1",
     "@tanstack/react-table": "^8.21.2",
     "axios": "^1.8.3",
     "chart.js": "^4.4.8",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
+    "dayjs": "^1.11.13",
     "formik": "^2.4.6",
     "js-cookie": "^3.0.5",
     "lucide-react": "^0.479.0",
+    "moment-timezone": "^0.5.47",
     "next": "15.1.7",
     "react": "^19.0.0",
     "react-chartjs-2": "^5.3.0",
+    "react-dnd": "^16.0.1",
+    "react-dnd-html5-backend": "^16.0.1",
     "react-dom": "^19.0.0",
     "react-hot-toast": "^2.5.2",
     "react-otp-input": "^3.1.1",
+    "react-select": "^5.10.1",
+    "react-timezone-select": "^3.2.8",
     "react-use": "^17.6.0",
     "recharts": "^2.15.1",
     "tailwind-merge": "^3.0.2",
