--- a/package.json
+++ b/package.json
@@ -35,11 +35,13 @@
     "react-dnd": "^16.0.1",
     "react-dnd-html5-backend": "^16.0.1",
     "react-dom": "^19.0.0",
+    "react-full-screen": "^1.1.1",
     "react-hot-toast": "^2.5.2",
     "react-otp-input": "^3.1.1",
     "react-select": "^5.10.1",
     "react-timezone-select": "^3.2.8",
     "react-use": "^17.6.0",
+    "react-use-websocket": "^4.13.0",
     "recharts": "^2.15.1",
     "tailwind-merge": "^3.0.2",
     "tailwind-scrollbar": "^4.0.1",
