--- a/package.json
+++ b/package.json
@@ -38,11 +38,13 @@
     "react-full-screen": "^1.1.1",
     "react-hot-toast": "^2.5.2",
     "react-otp-input": "^3.1.1",
+    "react-player": "^2.16.0",
     "react-select": "^5.10.1",
     "react-timezone-select": "^3.2.8",
     "react-use": "^17.6.0",
     "react-use-websocket": "^4.13.0",
     "recharts": "^2.15.1",
+    "swiper": "^11.2.6",
     "tailwind-merge": "^3.0.2",
     "tailwind-scrollbar": "^4.0.1",
     "tailwindcss-animate": "^1.0.7",
@@ -56,6 +58,7 @@
     "autoprefixer": "^10.4.21",
     "eslint": "^9.23.0",
     "eslint-config-next": "^15.1.7",
+    "eslint-config-react-app": "^7.0.1",
     "postcss": "^8.5.3",
     "tailwindcss": "^4.0.16",
     "typescript": "^5.8.2"
