build static past-translation screen

--- a/package.json
+++ b/package.json
@@ -48,6 +48,7 @@
     "react-use-websocket": "^4.13.0",
     "react-zxing": "^2.1.0",
     "recharts": "^2.15.1",
+    "rimraf": "^6.0.1",
     "swiper": "^11.2.6",
     "tailwind-merge": "^3.0.2",
     "tailwind-scrollbar": "^4.0.1",
