--- a/package.json
+++ b/package.json
@@ -42,6 +42,7 @@
     "react-hot-toast": "^2.5.2",
     "react-otp-input": "^3.1.1",
     "react-player": "^2.16.0",
+    "react-scrollama": "^2.4.1",
     "react-select": "^5.10.1",
     "react-timezone-select": "^3.2.8",
     "react-use": "^17.6.0",
