--- a/package.json
+++ b/package.json
@@ -27,18 +27,21 @@
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "dayjs": "^1.11.13",
+    "espeak-ng": "^1.0.2",
     "formik": "^2.4.6",
     "js-cookie": "^3.0.5",
     "lucide-react": "^0.479.0",
     "memoize-one": "^6.0.0",
     "moment-timezone": "^0.5.47",
     "next": "^15.1.7",
+    "openai": "^5.9.0",
     "react": "^18.3.1",
     "react-chartjs-2": "^5.3.0",
     "react-dnd": "^16.0.1",
     "react-dnd-html5-backend": "^16.0.1",
     "react-dom": "^18.3.1",
     "react-full-screen": "^1.1.1",
+    "react-h5-audio-player": "^3.10.0",
     "react-hot-toast": "^2.5.2",
     "react-otp-input": "^3.1.1",
     "react-player": "^2.16.0",
