--- a/package.json
+++ b/package.json
@@ -44,6 +44,7 @@
     "react-full-screen": "^1.1.1",
     "react-h5-audio-player": "^3.10.0",
     "react-hot-toast": "^2.5.2",
+    "react-joyride": "^3.0.0-7",
     "react-otp-input": "^3.1.1",
     "react-player": "^2.16.0",
     "react-scrollama": "^2.4.1",
